8377797: Remove SA support for MethodData and the printmdo command
Reviewed-by: kevinw, ysuenaga, cjplummer, kvn