@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
 /**
  * @test
  * @bug 8174994 8200613
- * @summary Test the clhsdb commands 'printmdo', 'printall', 'jstack' on a CDS enabled corefile.
+ * @summary Test the clhsdb commands 'printall', 'jstack' on a CDS enabled corefile.
  * @requires vm.cds
  * @requires vm.hasSA
  * @requires vm.flavor == "server"
@@ -124,24 +124,10 @@ public class ClhsdbCDSCore {
                 throw new SkippedException("The CDS archive is not mapped");
             }
 
-            List testJavaOpts = Arrays.asList(Utils.getTestJavaOpts());
-
-            if (testJavaOpts.contains("-XX:TieredStopAtLevel=1")) {
-                // No MDOs are allocated in -XX:TieredStopAtLevel=1
-                // The reason is methods being compiled aren't hot enough
-                // Let's not call printmdo in such scenario
-                cmds = List.of("printall", "jstack -v");
-            } else {
-                cmds = List.of("printmdo -a", "printall", "jstack -v");
-            }
+            cmds = List.of("printall", "jstack -v");
 
             Map<String, List<String>> expStrMap = new HashMap<>();
             Map<String, List<String>> unExpStrMap = new HashMap<>();
-            expStrMap.put("printmdo -a", List.of(
-                "CounterData",
-                "BranchData"));
-            unExpStrMap.put("printmdo -a", List.of(
-                "No suitable match for type of address"));
             expStrMap.put("printall", List.of(
                 "aload_0",
                 "_nofast_aload_0",
